--- a/index.html
+++ b/index.html
@@ -71,6 +71,11 @@
           <h2 class="visually-hidden">Skills</h2>
           <ul class="skills-list">
             <li class="skills-list-item">
+              <div class="skills-icon-background">
+                <svg width="64" height="64" aria-label="antenna-icon">
+                  <use href="./images/icons/symbol-defs.svg#antenna"></use>
+                </svg>
+              </div>
               <h3 class="skills-list-title">Strategy</h3>
               <p class="skills-description">
                 Our goal is to identify the business problem to walk away with
@@ -78,6 +83,12 @@
               </p>
             </li>
             <li class="skills-list-item">
+              <div class="skills-icon-background">
+                <svg width="64" height="64" aria-label="clock-icon">
+                  <use href="./images/icons/symbol-defs.svg#clock"></use>
+                </svg>
+              </div>
+
               <h3 class="skills-list-title">Punctuality</h3>
               <p class="skills-description">
                 Bring the key message to the brand's audience for the best price
@@ -85,6 +96,12 @@
               </p>
             </li>
             <li class="skills-list-item">
+              <div class="skills-icon-background">
+                <svg width="64" height="64" aria-label="diagram-icon">
+                  <use href="./images/icons/symbol-defs.svg#diagram"></use>
+                </svg>
+              </div>
+
               <h3 class="skills-list-title">Diligence</h3>
               <p class="skills-description">
                 Research and confirm brands that present the strongest digital
@@ -92,6 +109,12 @@
               </p>
             </li>
             <li class="skills-list-item">
+              <div class="skills-icon-background">
+                <svg width="64" height="64" aria-label="astronaut-icon">
+                  <use href="./images/icons/symbol-defs.svg#astronaut"></use>
+                </svg>
+              </div>
+
               <h3 class="skills-list-title">Technologies</h3>
               <p class="skills-description">
                 Design practice focused on digital experiences. We bring forth a
@@ -113,9 +136,53 @@
                 width="264"
                 height="260"
               />
-              <div class="names-jobs">
+              <div class="card-content">
                 <h3 class="our-team-decription-title">Mark Guerrero</h3>
                 <p class="our-team-decription">Product Designer</p>
+                <div class="our-team-icon-container">
+                  <a href="" class="icon-links"
+                    ><svg
+                      class="our-team-icon icon"
+                      width="40"
+                      height="40"
+                      aria-label="instagram icon"
+                    >
+                      <use
+                        href="./images/icons/symbol-defs.svg#instagram"
+                      ></use>
+                    </svg>
+                  </a>
+                  <a href="" class="icon-links"
+                    ><svg
+                      class="our-team-icon icon"
+                      width="40"
+                      height="40"
+                      aria-label="facebook icon"
+                    >
+                      <use
+                        href="./images/icons/symbol-defs.svg#facebook"
+                      ></use></svg></a
+                  ><a href="" class="icon-links"
+                    ><svg
+                      class="our-team-icon icon"
+                      width="40"
+                      height="40"
+                      aria-label="twitter icon"
+                    >
+                      <use
+                        href="./images/icons/symbol-defs.svg#twitter"
+                      ></use></svg></a
+                  ><a href="" class="icon-links"
+                    ><svg
+                      class="our-team-icon icon"
+                      width="40"
+                      height="40"
+                      aria-label="linkedin icon"
+                    >
+                      <use href="./images/icons/symbol-defs.svg#linkedin"></use>
+                    </svg>
+                  </a>
+                </div>
               </div>
             </li>
             <li class="our-team-list-item">
@@ -125,9 +192,53 @@
                 width="264"
                 height="260"
               />
-              <div class="names-jobs">
+              <div class="card-content">
                 <h3 class="our-team-decription-title">Tom Ford</h3>
                 <p class="our-team-decription">Frontend Developer</p>
+                <div class="our-team-icon-container">
+                  <a href="" class="icon-links"
+                    ><svg
+                      class="our-team-icon icon"
+                      width="40"
+                      height="40"
+                      aria-label="instagram icon"
+                    >
+                      <use
+                        href="./images/icons/symbol-defs.svg#instagram"
+                      ></use>
+                    </svg>
+                  </a>
+                  <a href="" class="icon-links"
+                    ><svg
+                      class="our-team-icon icon"
+                      width="40"
+                      height="40"
+                      aria-label="facebook icon"
+                    >
+                      <use
+                        href="./images/icons/symbol-defs.svg#facebook"
+                      ></use></svg></a
+                  ><a href="" class="icon-links"
+                    ><svg
+                      class="our-team-icon icon"
+                      width="40"
+                      height="40"
+                      aria-label="twitter icon"
+                    >
+                      <use
+                        href="./images/icons/symbol-defs.svg#twitter"
+                      ></use></svg></a
+                  ><a href="" class="icon-links"
+                    ><svg
+                      class="our-team-icon icon"
+                      width="40"
+                      height="40"
+                      aria-label="linkedin icon"
+                    >
+                      <use href="./images/icons/symbol-defs.svg#linkedin"></use>
+                    </svg>
+                  </a>
+                </div>
               </div>
             </li>
             <li class="our-team-list-item">
@@ -137,9 +248,53 @@
                 width="264"
                 height="260"
               />
-              <div class="names-jobs">
+              <div class="card-content">
                 <h3 class="our-team-decription-title">Camila Garcia</h3>
                 <p class="our-team-decription">Marketing</p>
+                <div class="our-team-icon-container">
+                  <a href="" class="icon-links"
+                    ><svg
+                      class="our-team-icon icon"
+                      width="40"
+                      height="40"
+                      aria-label="instagram icon"
+                    >
+                      <use
+                        href="./images/icons/symbol-defs.svg#instagram"
+                      ></use>
+                    </svg>
+                  </a>
+                  <a href="" class="icon-links"
+                    ><svg
+                      class="our-team-icon icon"
+                      width="40"
+                      height="40"
+                      aria-label="facebook icon"
+                    >
+                      <use
+                        href="./images/icons/symbol-defs.svg#facebook"
+                      ></use></svg></a
+                  ><a href="" class="icon-links"
+                    ><svg
+                      class="our-team-icon icon"
+                      width="40"
+                      height="40"
+                      aria-label="twitter icon"
+                    >
+                      <use
+                        href="./images/icons/symbol-defs.svg#twitter"
+                      ></use></svg></a
+                  ><a href="" class="icon-links"
+                    ><svg
+                      class="our-team-icon icon"
+                      width="40"
+                      height="40"
+                      aria-label="linkedin icon"
+                    >
+                      <use href="./images/icons/symbol-defs.svg#linkedin"></use>
+                    </svg>
+                  </a>
+                </div>
               </div>
             </li>
             <li class="our-team-list-item">
@@ -149,9 +304,53 @@
                 width="264"
                 height="260"
               />
-              <div class="names-jobs">
+              <div class="card-content">
                 <h3 class="our-team-decription-title">Daniel Wilson</h3>
                 <p class="our-team-decription">UI Designer</p>
+                <div class="our-team-icon-container">
+                  <a href="" class="icon-links"
+                    ><svg
+                      class="our-team-icon icon"
+                      width="40"
+                      height="40"
+                      aria-label="instagram icon"
+                    >
+                      <use
+                        href="./images/icons/symbol-defs.svg#instagram"
+                      ></use>
+                    </svg>
+                  </a>
+                  <a href="" class="icon-links"
+                    ><svg
+                      class="our-team-icon icon"
+                      width="40"
+                      height="40"
+                      aria-label="facebook icon"
+                    >
+                      <use
+                        href="./images/icons/symbol-defs.svg#facebook"
+                      ></use></svg></a
+                  ><a href="" class="icon-links"
+                    ><svg
+                      class="our-team-icon icon"
+                      width="40"
+                      height="40"
+                      aria-label="twitter icon"
+                    >
+                      <use
+                        href="./images/icons/symbol-defs.svg#twitter"
+                      ></use></svg></a
+                  ><a href="" class="icon-links"
+                    ><svg
+                      class="our-team-icon icon"
+                      width="40"
+                      height="40"
+                      aria-label="linkedin icon"
+                    >
+                      <use href="./images/icons/symbol-defs.svg#linkedin"></use>
+                    </svg>
+                  </a>
+                </div>
               </div>
             </li>
           </ul>
@@ -162,7 +361,7 @@
         <div class="container">
           <h2 class="portfolio-title">Our Portfolio</h2>
           <ul class="portfolio-list">
-            <li>
+            <li class="portfolio-list-item">
               <div class="box-overlay">
                 <img
                   class="portfolio-image"
@@ -179,13 +378,12 @@
                   </p>
                 </div>
               </div>
-
               <div class="portfolio-text">
                 <h3 class="portfolio-decription-title">Banking App</h3>
                 <p class="portfolio-decription">App</p>
               </div>
             </li>
-            <li>
+            <li class="portfolio-list-item">
               <img
                 class="portfolio-image"
                 src="./images/our-portfolio/img-4.jpg"
@@ -198,7 +396,7 @@
                 <p class="portfolio-decription">Marketing</p>
               </div>
             </li>
-            <li>
+            <li class="portfolio-list-item">
               <img
                 class="portfolio-image"
                 src="./images/our-portfolio/img-3.jpg"
@@ -211,7 +409,7 @@
                 <p class="portfolio-decription">App</p>
               </div>
             </li>
-            <li>
+            <li class="portfolio-list-item">
               <img
                 class="portfolio-image"
                 src="./images/our-portfolio/img-2.jpg"
@@ -224,7 +422,7 @@
                 <p class="portfolio-decription">Marketing</p>
               </div>
             </li>
-            <li>
+            <li class="portfolio-list-item">
               <img
                 class="portfolio-image"
                 src="./images/our-portfolio/img-1.jpg"
@@ -237,7 +435,7 @@
                 <p class="portfolio-decription">Design</p>
               </div>
             </li>
-            <li>
+            <li class="portfolio-list-item">
               <img
                 class="portfolio-image"
                 src="./images/our-portfolio/img.jpg"
@@ -256,54 +454,61 @@
     </main>
     <!------------ Footer ------------>
     <footer class="footer">
-      <div class="container">
-        <a href="./index.html" class="footer-logo"
-          >Web<span class="footer-logo-part">Studio</span></a
-        >
-        <p class="footer-text">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+      <div class="container footer-container">
+        <div>
+          <a href="./index.html" class="footer-logo"
+            >Web<span class="footer-logo-part">Studio</span></a
+          >
+          <p class="footer-text">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+
         <div class="social-media">
           <p class="social-media-text">Social media</p>
-          <a href="" class="icon-links"
-            ><svg
-              class="icon instagram-icon"
-              width="40"
-              height="40"
-              aria-label="instagram icon"
-            >
-              <use href="./images/icons/symbol-defs.svg#instagram"></use>
-            </svg>
-          </a>
-          <a href="" class="icon-links"
-            ><svg
-              class="icon facebook-icon"
-              width="40"
-              height="40"
-              aria-label="facebook icon"
-            >
-              <use
-                href="./images/icons/symbol-defs.svg#facebook"
-              ></use></svg></a
-          ><a href="" class="icon-links"
-            ><svg
-              class="icon twitter-icon"
-              width="40"
-              height="40"
-              aria-label="twitter icon"
-            >
-              <use href="./images/icons/symbol-defs.svg#twitter"></use></svg></a
-          ><a href="" class="icon-links"
-            ><svg
-              class="icon linkedin-icon"
-              width="40"
-              height="40"
-              aria-label="linkedin icon"
-            >
-              <use href="./images/icons/symbol-defs.svg#linkedin"></use>
-            </svg>
-          </a>
+          <div class="footer-icon-container">
+            <a href="" class="icon-links"
+              ><svg
+                class="footer-icon icon"
+                width="40"
+                height="40"
+                aria-label="instagram icon"
+              >
+                <use href="./images/icons/symbol-defs.svg#instagram"></use>
+              </svg>
+            </a>
+            <a href="" class="icon-links"
+              ><svg
+                class="footer-icon icon"
+                width="40"
+                height="40"
+                aria-label="facebook icon"
+              >
+                <use
+                  href="./images/icons/symbol-defs.svg#facebook"
+                ></use></svg></a
+            ><a href="" class="icon-links"
+              ><svg
+                class="footer-icon icon"
+                width="40"
+                height="40"
+                aria-label="twitter icon"
+              >
+                <use
+                  href="./images/icons/symbol-defs.svg#twitter"
+                ></use></svg></a
+            ><a href="" class="icon-links"
+              ><svg
+                class="footer-icon icon"
+                width="40"
+                height="40"
+                aria-label="linkedin icon"
+              >
+                <use href="./images/icons/symbol-defs.svg#linkedin"></use>
+              </svg>
+            </a>
+          </div>
         </div>
       </div>
     </footer>
