--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
               <a class="menu-item active-item" href="./index.html">Studio</a>
             </li>
             <li>
-              <a class="menu-item" href="">Portfolio</a>
+              <a class="menu-item" href="#portfolio">Portfolio</a>
             </li>
             <li>
               <a class="menu-item" href="">Contacts</a>
@@ -524,7 +524,6 @@
             digital marketing & growth solutions.
           </p>
         </div>
-
         <div class="social-media">
           <p class="social-media-text">Social media</p>
           <ul class="footer-icon-list">
@@ -578,7 +577,123 @@
             </li>
           </ul>
         </div>
+        <div class="subscribe-container">
+          <div>
+            <label for="footer-input" class="footer-input-label"
+              >Subscribe</label
+            >
+            <input
+              type="email"
+              name="use-email"
+              placeholder="E-mail"
+              id="footer-input"
+              class="footer-input"
+            />
+          </div>
+          <button type="submit" class="footer-subscribe-btn">
+            Subscribe
+            <svg class="footer-subscribe-icon" width="24" height="20">
+              <use href="./images/icons.svg#send-icon"></use>
+            </svg>
+          </button>
+        </div>
       </div>
     </footer>
+    <!------------ Modal page ------------>
+    <!--backdrop is-open -->
+    <div class="backdrop">
+      <div class="modal">
+        <button class="modal-close-btn" type="button">
+          <svg class="modal-close-btn-icon" width="8" height="8">
+            <use href="./images/icons.svg#close"></use>
+          </svg>
+        </button>
+        <p class="modal-title">Leave your contacts and we will call you back</p>
+        <form class="contacts-form">
+          <div class="contacts-form-input-wrapper">
+            <label class="contacts-form-label" for="user-name">Name</label>
+            <div class="input-icon-wrapper">
+              <input
+                type="text"
+                class="contacts-form-input"
+                id="user-name"
+                name="user-contacts"
+                required
+                pattern="[A-Za-zа-яА-ЯїЇєЄіІ']+"
+              />
+              <svg class="input-field-icon" width="16" height="16">
+                <use href="./images/icons.svg#name-icon"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="contacts-form-input-wrapper">
+            <label class="contacts-form-label" for="user-phone-number"
+              >Phone</label
+            >
+            <div class="input-icon-wrapper">
+              <input
+                type="tel"
+                class="contacts-form-input"
+                id="user-phone-number"
+                name="user-contacts"
+                required
+                pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}"
+                title="xxx-xxx-xx-xx"
+              />
+              <svg class="input-field-icon" width="16" height="16">
+                <use href="./images/icons.svg#phone-icon"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="contacts-form-input-wrapper">
+            <label class="contacts-form-label" for="user-email">Email</label>
+            <div class="input-icon-wrapper">
+              <input
+                type="email"
+                class="contacts-form-input"
+                id="user-email"
+                name="user-contacts"
+                required
+              />
+              <svg class="input-field-icon" width="16" height="16">
+                <use href="./images/icons.svg#email-icon"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="contacts-form-input-wrapper">
+            <label class="contacts-form-label" for="user-comment"
+              >Comment</label
+            >
+            <textarea
+              class="form-textarea"
+              name="user-contacts"
+              id="user-comment"
+              required
+              placeholder="Text input"
+            ></textarea>
+          </div>
+          <div class="form-privacy-checkbox-container">
+            <input
+              type="checkbox"
+              class="form-privacy-checkbox visually-hidden"
+              id="privacy-checkbox"
+              name="privacy-policy"
+              value="true"
+              required
+            />
+            <label for="privacy-checkbox" class="privacy-checkbox-label"
+              ><span class="form-privacy-own-checkbox"
+                ><svg class="form-checkbox-icon" width="10" height="8">
+                  <use href="./images/icons.svg#checkbox-icon"></use>
+                </svg>
+              </span>
+              I accept the terms and conditions of the
+              <a href="" class="privacy-link">Privacy Policy</a></label
+            >
+          </div>
+          <button type="submit" class="form-submit-btn">Send</button>
+        </form>
+      </div>
+    </div>
   </body>
 </html>
