--- a/index.html
+++ b/index.html
@@ -578,30 +578,29 @@
           </ul>
         </div>
         <div class="subscribe-container">
-          <div>
-            <label for="footer-input" class="footer-input-label"
-              >Subscribe</label
-            >
-            <input
-              type="email"
-              name="use-email"
-              placeholder="E-mail"
-              id="footer-input"
-              class="footer-input"
-            />
-          </div>
-          <button type="submit" class="footer-subscribe-btn">
-            Subscribe
-            <svg class="footer-subscribe-icon" width="24" height="20">
-              <use href="./images/icons.svg#send-icon"></use>
-            </svg>
-          </button>
+          <p class="footer-subscribe-text">Subscribe</p>
+          <form class="subscribe-form">
+            <label
+              ><input
+                type="email"
+                name="use-email"
+                placeholder="E-mail"
+                id="footer-input"
+                class="footer-input"
+            /></label>
+            <button type="submit" class="footer-subscribe-btn">
+              Subscribe
+              <svg class="footer-subscribe-icon" width="24" height="24">
+                <use href="./images/icons.svg#send-icon"></use>
+              </svg>
+            </button>
+          </form>
         </div>
       </div>
     </footer>
     <!------------ Modal page ------------>
     <!--backdrop is-open -->
-    <div class="backdrop">
+    <div class="backdrop is-open">
       <div class="modal">
         <button class="modal-close-btn" type="button">
           <svg class="modal-close-btn-icon" width="8" height="8">
@@ -621,7 +620,7 @@
                 required
                 pattern="[A-Za-zа-яА-ЯїЇєЄіІ']+"
               />
-              <svg class="input-field-icon" width="16" height="16">
+              <svg class="input-field-icon" width="18" height="24">
                 <use href="./images/icons.svg#name-icon"></use>
               </svg>
             </div>
@@ -640,7 +639,7 @@
                 pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}"
                 title="xxx-xxx-xx-xx"
               />
-              <svg class="input-field-icon" width="16" height="16">
+              <svg class="input-field-icon" width="18" height="24">
                 <use href="./images/icons.svg#phone-icon"></use>
               </svg>
             </div>
@@ -655,18 +654,18 @@
                 name="user-contacts"
                 required
               />
-              <svg class="input-field-icon" width="16" height="16">
+              <svg class="input-field-icon" width="18" height="24">
                 <use href="./images/icons.svg#email-icon"></use>
               </svg>
             </div>
           </div>
-          <div class="contacts-form-input-wrapper">
+          <div class="contacts-form-input-wrapper-last">
             <label class="contacts-form-label" for="user-comment"
               >Comment</label
             >
             <textarea
               class="form-textarea"
-              name="user-contacts"
+              name="user-comment"
               id="user-comment"
               required
               placeholder="Text input"
@@ -676,12 +675,12 @@
             <input
               type="checkbox"
               class="form-privacy-checkbox visually-hidden"
-              id="privacy-checkbox"
+              id="user-privacy"
               name="privacy-policy"
               value="true"
               required
             />
-            <label for="privacy-checkbox" class="privacy-checkbox-label"
+            <label for="user-privacy" class="privacy-checkbox-label"
               ><span class="form-privacy-own-checkbox"
                 ><svg class="form-checkbox-icon" width="10" height="8">
                   <use href="./images/icons.svg#checkbox-icon"></use>
