--- a/index.html
+++ b/index.html
@@ -580,7 +580,7 @@
         <div class="subscribe-container">
           <p class="footer-subscribe-text">Subscribe</p>
           <form class="subscribe-form">
-            <label
+            <label class="footer-ibput-label"
               ><input
                 type="email"
                 name="use-email"
@@ -616,7 +616,7 @@
                 type="text"
                 class="contacts-form-input"
                 id="user-name"
-                name="user-contacts"
+                name="user-name"
                 required
                 pattern="[A-Za-zа-яА-ЯїЇєЄіІ']+"
               />
@@ -634,7 +634,7 @@
                 type="tel"
                 class="contacts-form-input"
                 id="user-phone-number"
-                name="user-contacts"
+                name="user-phone-number"
                 required
                 pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}"
                 title="xxx-xxx-xx-xx"
@@ -651,7 +651,7 @@
                 type="email"
                 class="contacts-form-input"
                 id="user-email"
-                name="user-contacts"
+                name="user-email"
                 required
               />
               <svg class="input-field-icon" width="18" height="24">
@@ -676,7 +676,7 @@
               type="checkbox"
               class="form-privacy-checkbox visually-hidden"
               id="user-privacy"
-              name="privacy-policy"
+              name="user-policy"
               value="true"
               required
             />
