--- a/index.html
+++ b/index.html
@@ -676,7 +676,7 @@
               type="checkbox"
               class="form-privacy-checkbox visually-hidden"
               id="user-privacy"
-              name="user-policy"
+              name="user-privacy"
               value="true"
               required
             />
